logs/rvo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/PyNaCl-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/geopy'...
Listing './lib/python3.5/site-packages/geopy/geocoders'...
Listing './lib/python3.5/site-packages/geopy-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/hurry'...
Listing './lib/python3.5/site-packages/hurry/filesize'...
Listing './lib/python3.5/site-packages/hurry.filesize-0.9.egg-info'...
Listing './lib/python3.5/site-packages/nacl'...
Listing './lib/python3.5/site-packages/nacl/bindings'...
Listing './lib/python3.5/site-packages/nacl/pwhash'...
Listing './lib/python3.5/site-packages/nltk'...
Listing './lib/python3.5/site-packages/nltk/app'...
Listing './lib/python3.5/site-packages/nltk/ccg'...
Listing './lib/python3.5/site-packages/nltk/chat'...
Listing './lib/python3.5/site-packages/nltk/chunk'...
Listing './lib/python3.5/site-packages/nltk/classify'...
Listing './lib/python3.5/site-packages/nltk/cluster'...
Listing './lib/python3.5/site-packages/nltk/corpus'...
Listing './lib/python3.5/site-packages/nltk/corpus/reader'...
Listing './lib/python3.5/site-packages/nltk/draw'...
Listing './lib/python3.5/site-packages/nltk/inference'...
Listing './lib/python3.5/site-packages/nltk/metrics'...
Listing './lib/python3.5/site-packages/nltk/misc'...
Listing './lib/python3.5/site-packages/nltk/parse'...
Listing './lib/python3.5/site-packages/nltk/sem'...
Listing './lib/python3.5/site-packages/nltk/sentiment'...
Listing './lib/python3.5/site-packages/nltk/stem'...
Listing './lib/python3.5/site-packages/nltk/tag'...
Listing './lib/python3.5/site-packages/nltk/tbl'...
Listing './lib/python3.5/site-packages/nltk/test'...
Listing './lib/python3.5/site-packages/nltk/test/unit'...
Listing './lib/python3.5/site-packages/nltk/test/unit/translate'...
Listing './lib/python3.5/site-packages/nltk/tokenize'...
Listing './lib/python3.5/site-packages/nltk/translate'...
Listing './lib/python3.5/site-packages/nltk/twitter'...
Listing './lib/python3.5/site-packages/nltk-3.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyblake2-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_simplemail-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/rvo'...
Listing './lib/python3.5/site-packages/rvo/commands'...
Compiling './lib/python3.5/site-packages/rvo/commands/export.py'...
***   File "./lib/python3.5/site-packages/rvo/commands/export.py", line 84
    print doc["content"]
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rvo/commands/stats.py'...
***   File "./lib/python3.5/site-packages/rvo/commands/stats.py", line 111
    print tabulate(table, headers=headers)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rvo/views.py'...
***   File "./lib/python3.5/site-packages/rvo/views.py", line 73
    print tabulate(table, headers=headers)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rvo-23.0.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplemail'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
